[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/game/Game.gd" type="Script" id=1]
[ext_resource path="res://src/world/World.gd" type="Script" id=2]
[ext_resource path="res://src/player/Player.gd" type="Script" id=3]
[ext_resource path="res://src/player/Camera.gd" type="Script" id=5]
[ext_resource path="res://src/UI/InGameMenu.gd" type="Script" id=6]
[ext_resource path="res://images/raw/UI/menu_background.png" type="Texture" id=7]
[ext_resource path="res://src/player/FPS.gd" type="Script" id=8]
[ext_resource path="res://images/raw/croshair.png" type="Texture" id=9]
[ext_resource path="res://src/player/Crosshair.gd" type="Script" id=10]
[ext_resource path="res://src/util/threadpool.gd" type="Script" id=11]
[ext_resource path="res://src/util/persistentstate.gd" type="Script" id=12]
[ext_resource path="res://Game.tres" type="Environment" id=13]
[ext_resource path="res://models/PlayerModel.dae" type="PackedScene" id=14]

[sub_resource type="CapsuleShape" id=7]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/BebasNeueBold.ttf"

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = SubResource( 5 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 13 )

[node name="Viewport" type="Viewport" parent="."]

[node name="World" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="Player" type="KinematicBody" parent="World"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="PlayerModel" parent="World/Player" instance=ExtResource( 14 )]
transform = Transform( -7, 1.98793e-07, 2.27221e-06, 0, 6.97336, -0.61009, -2.28089e-06, -0.61009, -6.97336, 0, -30, 5 )

[node name="PlayerCollider" type="CollisionShape" parent="World/Player"]
transform = Transform( 10, 0, 0, 0, -4.37114e-07, -15, 0, 10, -6.55671e-07, 0, -10, -1 )
shape = SubResource( 7 )

[node name="Camera" type="InterpolatedCamera" parent="World/Player"]
transform = Transform( 1.11111, 0, 0, 0, 1.11111, 0, 0, 0, 1.11111, 0, 5, 0 )
environment = ExtResource( 13 )
current = true
fov = 90.0
target = NodePath("..")
script = ExtResource( 5 )

[node name="Light" type="OmniLight" parent="World/Player"]
transform = Transform( 1.11111, 0, 0, 0, 1.11111, 0, 0, 0, 1.11111, 0, 13.5817, 0 )
light_color = Color( 0.870588, 0.580392, 0.0313726, 1 )

[node name="InGameMenu" type="Control" parent="World/Player"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="World/Player/InGameMenu"]
margin_left = 188.912
margin_top = 121.375
margin_right = 1088.91
margin_bottom = 621.375
texture = ExtResource( 7 )

[node name="saveChunkState" type="Button" parent="World/Player/InGameMenu/Background"]
margin_left = 100.204
margin_top = 165.427
margin_right = 220.204
margin_bottom = 185.427
text = "Save chunk state"

[node name="savePlayerState" type="Button" parent="World/Player/InGameMenu/Background"]
margin_left = 100.0
margin_top = 140.0
margin_right = 175.0
margin_bottom = 160.0
text = "Save player state"

[node name="addChunkToWorld" type="Button" parent="World/Player/InGameMenu/Background"]
margin_left = 98.8
margin_top = 191.9
margin_right = 231.8
margin_bottom = 211.9
text = "add chunk to world"

[node name="goToMain" type="Button" parent="World/Player/InGameMenu/Background"]
visible = false
margin_left = 100.0
margin_top = 113.368
margin_right = 175.0
margin_bottom = 133.368
text = "Go to main"

[node name="quit" type="Button" parent="World/Player/InGameMenu/Background"]
margin_left = 692.123
margin_top = 359.276
margin_right = 841.123
margin_bottom = 423.276
text = "quit"

[node name="resume" type="Button" parent="World/Player/InGameMenu/Background"]
margin_left = 100.534
margin_top = 390.909
margin_right = 161.534
margin_bottom = 410.909
text = "resume"

[node name="Title" type="Label" parent="World/Player/InGameMenu"]
margin_left = 838.015
margin_top = 134.0
margin_right = 1185.01
margin_bottom = 285.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Blocks"

[node name="InGameUI" type="Control" parent="World/Player"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="FPS" type="Label" parent="World/Player/InGameUI"]
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 8 )

[node name="Crosshair" type="TextureRect" parent="World/Player/InGameUI"]
margin_right = 217.0
margin_bottom = 217.0
rect_scale = Vector2( 0.25, 0.25 )
mouse_filter = 2
texture = ExtResource( 9 )
expand = true
script = ExtResource( 10 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, -0.707107, -3.09086e-08, 0, -4.37114e-08, 1, -0.707107, -0.707107, -3.09086e-08, 0, 100, 0 )
light_color = Color( 0.952941, 0.721569, 0.219608, 1 )
light_energy = 0.25
light_indirect_energy = 0.1
light_bake_mode = 0

[node name="Threadpool" type="Node" parent="."]
script = ExtResource( 11 )

[node name="PersistentState" type="Node" parent="."]
script = ExtResource( 12 )
[connection signal="pressed" from="World/Player/InGameMenu/Background/saveChunkState" to="World" method="_on_saveState_pressed"]
[connection signal="pressed" from="World/Player/InGameMenu/Background/savePlayerState" to="World/Player" method="_on_saveState_pressed"]
[connection signal="pressed" from="World/Player/InGameMenu/Background/addChunkToWorld" to="World" method="_on_addChunkToWorld_pressed"]
[connection signal="pressed" from="World/Player/InGameMenu/Background/goToMain" to="." method="_on_goToMain_pressed"]
[connection signal="pressed" from="World/Player/InGameMenu/Background/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="World/Player/InGameMenu/Background/resume" to="World/Player" method="_setControlModePlay"]
